--- a/src/pages/main/main.css
+++ b/src/pages/main/main.css
@@ -9,3 +9,10 @@
   border-radius: 5px;
   border: 1px solid #989999
 }
+.nodata {
+  width: 80%;
+  color: white;
+  background-color: #989999;
+  margin-top: 5px;
+  font-weight: 700;
+}
