--- a/src/components/table/table.css
+++ b/src/components/table/table.css
@@ -1,4 +1,4 @@
-.table {
+/* .table {
   border-collapse: separate;
   border-spacing: 0px 10px;
   width: 80%;
@@ -29,4 +29,4 @@
   display: flex;
   width: 80%;
   justify-content: end;
-}
+} */
