--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -7,7 +7,7 @@
   display: none;
   background: rgba(0,0,0,0.5);
 }
-.modal__form {
+/* .modal__form {
   padding: 20px;
   background: white;
   border-radius: 16px;
@@ -16,10 +16,10 @@
   justify-content: space-between;
   min-width: 250px;
   min-height: 200px;
-}
-.modal__form input {
+} */
+/* .modal__form input {
   height: 30px;
-}
+} */
 /* .modal__form input:invalid {
   box-shadow: 0 0 0 0 red;
 }
@@ -28,17 +28,17 @@
   box-shadow: none;
 } */
 
-.modal__form textarea {
+/* .modal__form textarea {
   height: 50px;
-}
+} */
 .modal.active {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.modal__form__buttonfield {
+/* .modal__form__buttonfield {
   display: flex;
   justify-content: center;
   flex-grow: 0.5;
-  
-}
+
+} */
