--- a/src/pages/main/main.css
+++ b/src/pages/main/main.css
@@ -1,18 +1,18 @@
-.worksheet {
+/* .worksheet {
   margin: 10px;
-}
- button {
+} */
+ /* button {
   cursor: pointer;
   color: white;
   margin: 2px;
   background-color: #989999;
   border-radius: 5px;
   border: 1px solid #989999
-}
-.nodata {
+} */
+/* .nodata {
   width: 80%;
   color: white;
   background-color: #989999;
   margin-top: 5px;
   font-weight: 700;
-}
+} */
